2010-06-28  John Gregg  <johnnyg@google.com>

        Reviewed by Kent Tamura.

        add ENABLE_DIRECTORY_UPLOAD build support
        https://bugs.webkit.org/show_bug.cgi?id=41100

        * Configurations/FeatureDefines.xcconfig:

2010-06-28  Xan Lopez  <xlopez@igalia.com>

        Revert to build jsc, since the tests expect this.

        * GNUmakefile.am:

2010-06-28  Zoltan Herczeg  <zherczeg@webkit.org>

        Reviewed by Oliver Hunt.

        Only one character lookahead should be enough for the lexer
        https://bugs.webkit.org/show_bug.cgi?id=41213

        The lexer had 4 character lookahead before, which required
        a complex shifting mechanism. This can be improved by using
        only one character lookahead for most decisions, and a
        peek() function as a fallback when it is absolutely necessary.

        * parser/Lexer.cpp:
        (JSC::Lexer::currentCharacter):
        (JSC::Lexer::currentOffset):
        (JSC::Lexer::setCode):
        (JSC::Lexer::shift):
        (JSC::Lexer::peek):
        (JSC::Lexer::getUnicodeCharacter):
        (JSC::Lexer::shiftLineTerminator):
        (JSC::Lexer::lastTokenWasRestrKeyword):
        (JSC::Lexer::lex):
        (JSC::Lexer::scanRegExp):
        (JSC::Lexer::skipRegExp):
        * parser/Lexer.h:

2010-06-28  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

        Unreviewed build fix.

        [EFL] Build fix for latest version of Ecore library.
        Ecore recently changed return type of callbacks from int to Eina_Bool.

        * wtf/efl/MainThreadEfl.cpp:
        (WTF::timeoutFired): Return Eina_Bool instead of int.

2010-06-28  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] QScriptValue should have API for accessing object properties
        https://bugs.webkit.org/show_bug.cgi?id=40903

        Make possible to access properties inside QScriptValues. While this